# ros2_framework

./: README.md  codebase structure.txt  frames_2025-09-24_17.37.11.gv  sync_git.sh
src/: MarkII_urdf.ros2_control.xacro  codebase structure.txt  ros2_controllers.yaml
src/mark_ii_moveit_new/: .setup_assistant  CMakeLists.txt  package.xml
src/mark_ii_moveit_new/config/: MarkII_urdf.ros2_control.xacro  MarkII_urdf.srdf  MarkII_urdf.urdf.xacro  chomp_planning.yaml  controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  planning_plugin.yaml  ps4_teleop.config.yaml  ros2_controllers.yaml  servo.yaml
src/mark_ii_moveit_new/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/simple_arm/: CMakeLists(old).txt  CMakeLists.txt  arm_hardware_plugin.xml  package.xml  setup.cfg  setup.py
src/simple_arm/config/: ros2_controllers.yaml
src/simple_arm/description/: MarkII_urdf.urdf
src/simple_arm/include/: arm_hardware_interface.hpp  asm_termios_proxy.h  sts_driver.hpp
src/simple_arm/launch/: arm_control.launch(c++).py  arm_control.launch.py  hardware_test.launch.py  joy_teleop.launch.py  realsense.launch.py
src/simple_arm/meshes/: base_link.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl  link7.stl  link8.stl
src/simple_arm/python_hw/: python_hw_inter.py
src/simple_arm/simple_arm/: ai_pi0_control.py  arm_driver_node.py  moveit_planner.py  python_hw_inter.py  sts_driver.py  test_base_angle.py  trajectory_action_bridge.py
src/simple_arm/src/: arm_hardware_interface.cpp  joy_to_servo.py  marker_to_servo  sts_driver.cpp
src/sts_driver_py/: arm_hardware_interface.py  package.xml  setup.py
src/sts_driver_py/sts_driver_py/: sts_driver.py
