<?xml version="1.0"?>
<package format="3">
  <name>mark_ii_moveit_new</name>
  <version>0.0.0</version>
  <description>MoveIt configuration for the Mark II arm</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies: Add any ROS2 packages your config relies on -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <!-- Add more if needed, e.g., for controllers: <depend>joint_trajectory_controller</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>