<?xml version="1.0"?>
<package format="3">
  <name>simple_arm</name>
  <version>1.0.0</version>
  <description>The hardware interface and control launch for the Mark II arm.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>pkgconfig</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>controller_manager</depend>
  <depend>ros2_controllers</depend>
  <depend>launch_ros</depend>
  <depend>sts_driver_py</depend>  <!-- If keeping -->
  <depend>python3-pip</depend>
  <depend>pyserial</depend>  <!-- If keeping Python parts -->
  <depend>joy</depend>
  <depend>sensor_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>